[metadata]
name = kennard_stone
version = attr: kennard_stone.__version__
author = attr: kennard_stone.__author__
author_email = attr: kennard_stone.__author_email__
maintainer = attr: kennard_stone.__author__
maintainer_email = attr: kennard_stone.__author_email__
description = "A method for selecting samples by spreading the training data evenly."
long_description = file: README.md
long_description_content_type = text/markdown
url = attr: kennard_stone.__url__
license = attr: kennard_stone.__license__
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch
    numpy
    pandas
    matplotlib
    scikit-learn
project_urls =
    PyPI = https://pypi.org/project/kennard-stone/
    Source = https://github.com/yu9824/kennard-stone
    Tracker = https://github.com/yu9824/kennard-stone/issues
keywords = "kennard_stone, scikit-learn, train_test_split, KFold"

[options.packages.find]
exclude =
    examples
    tests
