[metadata]
name = kennard_stone
version = attr: kennard_stone.__version__
author = yu9824
author_email = yu.9824.job@gmail.com
maintainer = yu9824
maintainer_email = yu.9824.job@gmail.com
description = A method for selecting samples by spreading the training data evenly.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yu9824/kennard_stone
license = "MIT"
project_urls =
    PyPI = https://pypi.org/project/kennard-stone/
    Source = https://github.com/yu9824/kennard_stone
    Tracker = https://github.com/yu9824/kennard_stone/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.20.0
    scikit-learn
keywords = kennard_stone, scikit-learn, train_test_split, KFold

[options.packages.find]
exclude =
    examples
    tests
